# RL_attempt1

./: .gitignore  AGENT_HANDOFF.md  DEPLOYMENT.md  HRL_WORKFLOW.md  KAGGLE_ISSUES_LOG.md  KAGGLE_WORKFLOW.md  Kaggle_Issue_Doc.md  Kaggle_Usage_Guide.md  README.md  SLURM_Issue_Doc.md  SLURM_Usage_Guide.md  deploy.sh  kaggle_setup.py  monitor_job.sh  python_version_transfer.md  requirements-cuda.txt  requirements-py312.txt  requirements.txt  setup.py  setup.sh  submit_snake_ppo.slurm  tb_connect.sh  test_integration.slurm  training_log.md
alf/: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml  setup.py
alf/.ci-cd/: Dockerfile.cpu  Dockerfile_py3.11_torch2.2.cpu  Dockerfile_update.cpu  requirements_py3.11.txt
alf/.github/workflows/: test.yml
alf/alf/: config_helpers.py  config_util.py  config_util_test.py  data_structures.py  data_structures_test.py  device_ctx.py  device_ctx_test.py  initializers_test.py  layers.py  layers_test.py  module.py  norm_layers.py  norm_layers_test.py  tensor_specs.py  tensor_specs_test.py
alf/alf/algorithms/: actor_critic_algorithm.py  actor_critic_algorithm_test.py  actor_critic_loss.py  actor_critic_loss_test.py  agent.py  agent_helpers.py  agent_test.py  algorithm.py  algorithm_interface.py  algorithm_test.py  async_unroller.py  async_unroller_test.py  bc_algorithm.py  causal_bc_algorithm.py  config.py  containers.py  containers_test.py  data_transformer.py  data_transformer_test.py  ddpg_algorithm.py  ddpg_algorithm_test.py  decoding_algorithm.py  diayn_algorithm.py  diayn_algorithm_test.py  distributed_off_policy_algorithm.py  doac_algorithm.py  dqn_algorithm.py  dsac_algorithm.py  dsac_algorithm_test.py  dynamic_action_repeat_agent.py  dynamics_learning_algorithm.py  encoding_algorithm.py  entropy_target_algorithm.py  entropy_target_algorithm_test.py  flow_matching_algorithm.py  flow_matching_algorithm_test.py  functional_particle_vi_algorithm.py  functional_particle_vi_algorithm_test.py  generator.py  generator_test.py  (+56 more)
alf/alf/environments/: alf_environment_test.py  alf_gym3_wrapper.py  alf_gym3_wrapper_test.py  alf_gym_wrapper.py  alf_gym_wrapper_test.py  (+48 more)
alf/docs/: conf.py  contributing.rst  notes.rst  overview.rst  tutorial.rst
alf/tools/: compare_training.py
dismech-python/: .gitignore  README.md  benchmark.py  pyproject.toml
dismech-python/data/: viz.ipynb
dismech-python/experiments/: create_target_shape_2D.ipynb  final_state.json  final_state_new.json  helix_n106.ipynb  rod_stretch_and_bend_control static.ipynb  rod_stretch_and_bend_control.ipynb  rod_stretch_and_bend_control_new.ipynb  rod_stretch_and_bend_control_new_snake.ipynb  rod_stretch_control static.ipynb  rod_stretch_control.ipynb  snake_for_ref.ipynb  snake_node0_trajectory.txt  snake_node0_x_trajectory.txt  snake_node0_y_trajectory.txt  tomato_cantilever.ipynb
(+324 files in other folders)
