[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11",
    "tomli>=1.1; python_version <= \"3.11\"",
]
build-backend = "setuptools.build_meta"

[project]
name = "alf"
version = "0.1.0"
description = "Agent Learning Framework for flexible RL research."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "Horizon Robotics" }]
dependencies = [
    "absl-py==2.2.2",
    # "atari_py==0.2.9",  # Removed: requires cmake, optional for Atari envs
    "bitsandbytes==0.45.5",
    "box2d-py==2.3.8",
    "clang-format==17.0.6",
    "cnest @ git+https://github.com/HorizonRobotics/cnest.git",
    "cpplint==1.6.1",
    "fasteners==0.19",
    "gin-config @ git+https://github.com/HorizonRobotics/gin-config.git",
    "gym==0.15.4",
    "gym3==0.3.3",
    "h5py==3.13.0",
    "matplotlib==3.10.1",
    "numpy==1.26",
    "opencv-python==4.11.0.86",
    # "pathos==0.3.4",  pathos removed due to conflict with lerobot (from openpi)
    "pillow>=8",
    "pre-commit==3.6.2",
    "protobuf<=4.23",  # to be compatible with openpi/tensorboard 2.15
    "psutil==7.0.0",
    "pybind11==2.13.6",
    "pybullet==2.5.0",
    "pydocstyle==6.3.0",
    "pylint==2.17.7",
    "pyglet==1.3.2",
    "rectangle-packer==2.0.4",
    "tensorboard==2.15.0",
    "threadpoolctl==3.6.0",
    "torch==2.7.1+cu118",
    "torchvision==0.22.1+cu118",
    "wheel",
    "yapf==0.43.0",
]

[project.optional-dependencies]
docs = [
    "sphinx==3.0",
    "sphinx-autobuild",
    "sphinx-autodoc-typehints @ git+https://github.com/hnyu/sphinx-autodoc-typehints.git",
    "sphinxcontrib-napoleon==0.7",
    "sphinx-rtd-theme==0.4.3",
]

[tool.uv]
index-strategy = "unsafe-best-match"
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
triton = { index = "pytorch-cu118" }

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["alf", "alf.*"]

[tool.setuptools.package-data]
alf = ["*.gin"]
