[project]
name = "dismech-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.7.0",
    "numba>=0.57.0",
    "plotly>=5.0.0",
    "scipy>=1.10.0",
    "sympy>=1.12.0",
]

[project.optional-dependencies]
pardiso = [
    "pypardiso>=0.4.6",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "ipywidgets>=8.1.7",
    "nbformat>=5.10.4",
    "pytest>=8.4.1",
]
